--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -894,6 +894,17 @@
     "accountVerification": {
         "alertEmailVerificationRequired": "Como forma de validação, enviaremos um código de segurança ao seu e-mail cadastrado",
         "alertPhoneVerificationRequired": "Como forma de validação, enviaremos um código de segurança ao seu telefone cadastrado",
-        "alertEmailAndPhoneVerificationRequired": "Como forma de validação, enviaremos um código de segurança ao seu e-mail e telefone cadastrados"
+        "alertEmailAndPhoneVerificationRequired": "Como forma de validação, enviaremos um código de segurança ao seu e-mail e telefone cadastrados",
+        "problemsWithCode": "Problemas com o código?",
+        "playngByTheRules": "Jogando com a regra",
+        "checkSpam": "Verifique a sua caixa de spam.",
+        "checkEmailRegistered": "Certifique-se de que você tem acesso ao e-mail cadastrado.",
+        "checkPhoneSignal": "Verifique se o seu telefone está com sinal telefônico",
+        "checkPhoneNumberRegistered": "Verifique se o número cadastrado  recebe ligações e mensagens",
+        "checkSignal": "Verifique se o seu telefone está com sinal telefônico",
+        "checkPhone": "Verifique se o número cadastrado  recebe ligações e mensagens"
+    },
+    "buttons": {
+        "talkToSupport": "Fale com o suporte"
     }
 }
