--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -895,9 +895,9 @@
         "checkSpam": "Check your spam box.",
         "checkEmailRegistered": "Make sure you have access to your registered e-mail.",
         "checkPhoneSignal": "Check if your phone has signal",
-        "checkPhoneNumberRegistered": "Check if the registered number receives calls and messages",        
-        "checkSignal": "Check if your phone has signal",
-        "checkPhone": "Check if the registered number receives calls and messages"
+        "checkPhoneNumberRegistered": "Check if the registered number receives calls and messages",
+        "checkingLegistation": "In order to comply with the legislation, we need to carry out this validation stage.",
+        "securePlataform": "This measure guarantees more security for you on our platform!"
     },
     "buttons": {
         "talkToSupport": "Talk to support"
