--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -893,9 +893,9 @@
         "checkSpam": "Verifique su bandeja de spam.",
         "checkEmailRegistered": "Asegúrese de tener acceso al correo registrado.",
         "checkPhoneSignal": "Verifique si su teléfono tiene sinal telefónica",
-        "checkPhoneNumberRegistered": "Verifique si el número registrado recibe llamadas y mensajes",        
-        "checkSignal": "Verifique si su teléfono tiene sinal telefónica",
-        "checkPhone": "Verifique si el número registrado recibe llamadas y mensajes"
+        "checkPhoneNumberRegistered": "Verifique si el número registrado recibe llamadas y mensajes",
+        "checkingLegistation": "Para cumplir la legislación, debemos llevar a cabo esta fase de validación.",
+        "securePlataform": "Esta medida le garantiza una mayor seguridad en nuestra plataforma."      
     },
     "buttons": {
         "talkToSupport": "Hable con el soporte"
