--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -702,7 +702,8 @@
         "next": "Siguiente",
         "previous": "Anterior",
         "save_change": "Guardar Cambio",
-        "view": "Ver"
+        "view": "Ver",
+        "talkToSupport": "Hable con el soporte"
     },
     "conta": {
         "recuperarMinhaConta": "Recuperar mi cuenta!",
@@ -897,8 +898,5 @@
         "checkPhoneNumberRegistered": "Verifique si el número registrado recibe llamadas y mensajes",
         "checkingLegistation": "Para cumplir la legislación, debemos llevar a cabo esta fase de validación.",
         "securePlataform": "Esta medida le garantiza una mayor seguridad en nuestra plataforma."      
-    },
-    "buttons": {
-        "talkToSupport": "Hable con el soporte"
     }
 }
