--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -302,7 +302,11 @@
         "updateInformationPersonalData": "Actualice y gestione su información, como nombre, correo electrónico y número de teléfono, para garantizar una experiencia personalizada y segura en el sistema.",
         "change_email": "Cambiar correo electrónico",
         "change_phone": "Cambiar teléfono",
-        "logout_account": "Salir de la cuenta"
+        "logout_account": "Salir de la cuenta",
+        "copy": "Copiar",
+        "paste": "Colar",
+        "codeIn": "código en {{time}}s",
+        "resend": "Reenviar"
     },
     "bankAccounts": {
         "title" : "Bank Accounts",
@@ -897,6 +901,15 @@
         "checkPhoneSignal": "Verifique si su teléfono tiene sinal telefónica",
         "checkPhoneNumberRegistered": "Verifique si el número registrado recibe llamadas y mensajes",
         "checkingLegistation": "Para cumplir la legislación, debemos llevar a cabo esta fase de validación.",
-        "securePlataform": "Esta medida le garantiza una mayor seguridad en nuestra plataforma."      
+        "securePlataform": "Esta medida le garantiza una mayor seguridad en nuestra plataforma.",
+        "validationWithSuccess": "¡Tu {{verificationType}} ha sido validado con éxito!",
+        "accessIsAlmostReadyMessage": "¡Falta poco para acceder a la mejor plataforma! Aún quedan algunas informaciones por validar.",
+        "almostDoneMessage": "¡Ya casi está! Aún quedan algunas informaciones por validar.",
+        "whyNeedValidate": "¿Por qué necesito validar?",
+        "enterTheVerificationCode": "Ingresa el código del {{verificationType}}",
+        "dontReceiveTheEmail": "No recibiste el {{verificationType}}?",
+        "verificationCodeHasBeenSentToEmail": "Se ha enviado un correo con el código de verificación a {{email}}",
+        "verificationCodeHasBeenSentToPhone": "Se ha enviado un mensaje de texto con el código de verificación a {{phone}}",
+        "validatingCode": "Validando el código"
     }
 }
