--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -268,6 +268,7 @@
         "field": "Campo",
         "or": "OU",
         "geolocationError": "Por favor, verifique a configuração de localização do seu navegador e tente novamente.",
+        "geolocationErrorWhenBettting": "Por favor, verifique a configuração de localização do seu navegador e tente apostar novamente.",
         "restricaoDeLocalizacao": "Este recurso está disponível apenas para usuários no Brasil.",
         "stateRestriction": "Este recurso não está disponivel para o seu estado.",
         "locationPermission": "Para utilizar este recurso, é necessário ativar a localização no navegador.",
